# Natural-Language-Processing

./: .gitignore  README.md  environment.yml  pyproject.toml  text-classification-feature-extractors.ipynb
01-introduction/: nlp_tasks.ipynb
02-text-classification/: distilbert_feature_extractor.ipynb  example_scripts.py
text-classification/: text-classification-feature-extractors.ipynb
