[tool.poetry]
name = "natural-language-processing"
version = "0.1.0"
description = "Hugging Face tutorials"
authors = ["silvinohenrique.teixeiramalta <silvinohenrique.teixeiramalta@isobar.onmicrosoft.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "natural_language_processing"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = {extras = ["torch"], version = "^4.36.1"}
datasets = "^2.15.0"
scikit-learn = "^1.3.2"
huggingface-hub = "^0.19.4"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
torch = "^2.1.2"
umap-learn = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
